# tEngine

./: .gitignore  CMakeLists.txt  glfw
.cache/clangd/index/: Clock.cpp.6B80E3127A5B721B.idx  Clock.cpp.A91F06C03D14A7CF.idx  Clock.hpp.46F4BEAE334A09F7.idx  Clock.hpp.E505C3C4FE385FBB.idx  Log.cpp.3A4385ACD787DFB1.idx  Log.cpp.B9CCC4EB999B693A.idx  Log.hpp.8A62193980661572.idx  Log.hpp.AD441763279756C8.idx  TestTests.cpp.0DBA707A2132FE3A.idx  sandbox_main.cpp.BB993B52E00E95FB.idx  sandbox_main.cpp.D4E4F51806A95EA8.idx
cmake/: FetchDeps.cmake
src/: CMakeLists.txt  tengine.hpp
src/app/: sandbox_main.cpp
src/core/: Log.cpp  Log.hpp  application.cpp  application.hpp  assert.hpp  raii.hpp
src/core/filesystem/: IFile.hpp  IFilesystem.hpp  Structures.hpp
src/core/time/: Clock.cpp  Clock.hpp
src/platform/: input.cpp  input.hpp  platform.cpp  platform.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  TestTests.cpp
